Spark/k8s/spark-worker-service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: analytics
  name: sparkworker
spec:
  selector:
    app: sparkworker
  ports:
    - port: 8081
      targetPort: 8081
      name: ui  
  clusterIP: None
